<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/english"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/english"
            android:background="@drawable/shadow_button_layer_list"/>
        <Button
            android:id="@+id/hindi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/Hindi"
            android:background="@drawable/shadow_button_layer_list"/>
        <Button
            android:id="@+id/gujarati"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/Gujarati"
            android:background="@drawable/shadow_button_layer_list"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>