<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vaccineregistrationforIndian.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top">

        <androidx.cardview.widget.CardView
            android:id="@+id/fl_adplaceholder_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_app_name"
            app:cardCornerRadius="4dp">

            <ImageView
                android:id="@+id/fl_adplaceholder"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="vertical"
                android:src="@drawable/banner" />

        </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/slotbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_gravity="center"
        android:text="@string/veccination_slot"
        android:background="@drawable/shadow_button_layer_list"/>


    <Button
        android:id="@+id/regibtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/vaccination_registration"
        android:background="@drawable/shadow_button_layer_list"/>

        <Button
            android:id="@+id/lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/chnage_lang"
            android:background="@drawable/shadow_button_layer_list"/>

        <Button
            android:id="@+id/sharapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/sharapp"
            android:background="@drawable/shadow_button_layer_list"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <LinearLayout
                android:id="@+id/ad_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal" />
        </LinearLayout>
    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_home_footer"
        android:visibility="gone"></com.google.android.gms.ads.AdView>
</RelativeLayout>